# quickscan

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: index.html
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: HomePage.tsx
src/components/common/: Header.tsx  ProgressBar.tsx  ScoreCircle.tsx  StatusBadge.tsx  index.ts
src/components/detection/: CameraTest.tsx  DetectionPage.tsx  KeyboardTest.tsx  MicrophoneTest.tsx  ScreenTest.tsx  SpeakerTest.tsx  TrackpadTest.tsx  index.ts
src/components/report/: ReportPage.tsx
src/i18n/: en.json  index.ts  zh.json
src/styles/: global.css
src/types/: index.ts
