[package]
name = "quickscan"
version = "0.1.0"
description = "秒验 - 二手电脑一键检测工具"
authors = ["QuickScan Team"]
edition = "2021"

[lib]
name = "quickscan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"

